Update   非图形验证码分析——极验验证

--- a/2015-2/L-C/非图形验证码实验报告.md
+++ b/2015-2/L-C/非图形验证码实验报告.md
@@ -15,6 +15,294 @@
 
 ###**一、geetest(极验)** 
 
+###原理分析：
+
+（一）简介：
+
+          拖动按钮到适当位置完成拼图即可完成验证。这就是“极验验证”的验证解决方案。相较于传统的
+      码式验证，由于省去了“识别”、“输入”等过程，用户验证时间从原来的可能10多秒缩短到仅需 2、3 
+      秒。虽然过程变简单了，但安全性却比之前的码式验证高出许多。      
+          就是这简单的一下拖动，后台却能提取超过 100多个变量，包括拖动位置、拖动速度等显性变量，
+      和服务器的数据交换等隐性变量，以及一些随机性变量。基于以上行为变量，再通过极验核心的多重
+      行为判别模型，使得后台能够区分出“人”与“恶意程序”。
+
+（二）通讯过程：
+
+      （1）浏览器请求网站主页面
+      （2）网站主请求极验服务器做心跳检测
+               判断极验SAAS服务是否正常
+               获取必要的验证初始化工作
+      （3）极验心跳反馈
+      （4）启用正常（或者启用failback防宕机机制）
+      （5）页面初始化验证模块
+      （6）用户交互，浏览器上传行为数据到极验
+      （7）极验服务器分析给出结果到浏览器客户端
+      （8）浏览器提交数据到客户服务器
+      （9）客户端服务器使用SDK二次验证
+      （10）给出页面响应操作
+
+极验验证/网站主/客户浏览器三方的通讯时序图如下:
+
+![image](https://github.com/AvileHui/Photos/raw/master/图片1.png)
+
+（三）宕机回滚
+
+      在遇到不可抗拒的因素，例如：地震，火灾，机房大规模停电。极验也尽量保证不影响用户页面
+      的正常使用。极验技术团队尽快多方面联系和解决，尽快恢复服务。
+      在此期间，网站主的验证会自动切换到离线备选方案状态，确保用户的业务逻辑能够正常通行。
+      主要原理：
+  
+    （1）浏览器向客户服务器请求页面
+    （2）客户服务器向极验服务器发起请求
+    （3）根据极验服务器的运行情况返回不同的页面
+        如果极验服务器正常。 加载极验验证
+        如果极验服务器不正常。 加载极验离线版，或者用户自己的原始数字图片验证码
+    （4）用户提交页面时，执行不同的验证手段。
+
+离线备选方案通讯图如下：
+
+![image](https://github.com/AvileHui/Photos/raw/master/图片2.png)
+
+（四）服务端SDK
+
+        服务端的SDK存在的目的是为了让真正的验证请求和回答都来自于可信的终端：网站主服务器
+     和极验服务器。极验为每一种服务器端开发语言提供了SDK，并以web客户端为例子提供了相应的
+     Demo，开发人员可以快速的搭建起相应的演示程序。
+        开发人员使用Demo提供的默认验证模块快速搭建本地应用并成功运行后，只需要经过如下步
+     骤做出相应修改就可以完成个人专属验证模块的绑定
+
+    （1）从 验证后台 注册账号
+    （2）添加验证，可以获取一组当前验证的ID/Key
+    （3）将ID和Key分别替换到Demo项目中的captcha_id/private_key变量的值
+    （4）检验验证Demo正常运行。运行Demo程序，手动拖动验证模块并通过验证，重复几次，查看后端SDK验证结果是否一致
+    （5）检验验证后台统计工具。从 验证后台 查看相应的验证模块的验证统计数据变化
+    （6）顺利完成环境搭建,而且和您的专属验证模块成功绑定
+     
+###安全分析：
+
+（一）安全指标:
+
+    （1）防重放
+         客户服务器会对验证结果进行一次查询，在极验的服务器上，只要验证被查询过一次就失效，不存在“一次成功，
+         反复重复验证”的情况。
+    （2）防绕过
+         因为极验验证是存在客户服务器的二次查询机制，此通过过程来自于两个可信终端：网站主服务器和极验服务器，
+         完全避免了机器人在客户端上对判定结果的更改，避免破解程序绕过验证模块。
+    （3）防人工打码
+         极验验证模块对所有的验证活动都具有时效限制，不可能存在一次性拖动N次，然后在过很久后再集中使用刷榜的
+         问题。从根本上极大的增加了人工打码的成本。
+
+（二）安全的技术支持：
+
+          极验验证不再仅通过图灵理论，而是通过多重行为特征来区分人机，利用“行为式验证”彻底改变传统
+      “码式验证”技术的单一防护构架。 基于行为式验证的理论基础，极验验证在全面考虑验证技术原理后，
+      提出全新的验证安全框架，从根本上颠覆了第一代验证的理论基础，将人工智能、机器学习等技术与
+      验证的安全紧密结合，达到一个全新的高度。主要采用“多重异构”、 “动态更新”、“黑盒隐藏”三点安全策略，
+      从根本上保障网站的安全。
+      
+前端收集的数据：
+
+    （1）challenge:后台生成的一个验证流水
+    （2）userreponse:交互的位置经过加密后的结果
+    （3）passtime:从鼠标点击开始，到完成验证结束之后时间差
+    （4）imgload:验证图片加载的时间
+    （5）b:内部保留字段
+    （6）random:随机参数
+    （7）a:压缩编码后的轨迹
+前端收集的数据说明极验验证不会对网站的隐私信息有任何侵犯。
+
+（三）安全隐患（实验）
+
+1、经不住计算机的枚举验证破解
+
+#####验证图片是每次随机生成还是说是一个可以遍历穷举的库?是否很容易破解?
+        
+        官网解释：验证的图片有通过加密方式，提高图片获取难度。并且图片都是提前随机生成
+                  上传到cdn服务器上的。
+                  gtWeb模块验证是存在双重认证的
+                       第一重：图像匹配和吻合
+                       第二重：根据鼠标动力学和对人机交互轨迹特征进行的行为特征提取和鉴别来区分。
+
+实验对象举例：雷劈网
+
+极验验证：出现一张图片，以及一个拼图，鼠标拉动滑块将拼图拼在图片指定位置，即完成了验证。
+
+![image](https://github.com/AvileHui/Photos/raw/master/图片3.png)
+
+验证滑块的长度为0~198个像素：
+
+![image](https://github.com/AvileHui/Photos/raw/master/图片4.png)
+   
+         多次试验得出重合区域误差在5~8个像素可成功通过验证，说明有8/198的几率可以随机尝试成功。
+     尝试五次失败后刷新一次图片，每张图片对应的验证位置是固定的，因为拼图的图案是固定的几片，
+     而且图片是提前随机生成存到服务器中，说明还是有一定的数量，没有做到每个ID的每次验证做到随机，
+     就可以建成一个破解验证码的库，验证码一旦有一个库，就可以穷举。
+
+
+
+
+        雷劈网的极验验证还有个bug，在尝试很多遍之后刷新出来的图片一直不变，而且连位置都一模一样
+     （如下图）
+        可能是因为极验验证的图片大小远大于普通验证码，为了提高效率，而重复使用图片，造成验证码
+     单一可枚举，所以说这就导致机器更加容易枚举破解验证码了。
+![image](https://github.com/AvileHui/Photos/raw/master/图片5.png)
+![image](https://github.com/AvileHui/Photos/raw/master/图片6.png)
+
+
+         在雷劈网的前端，直接可以得到验证图片相应位置所对应的选项库，雷劈网运用的验证图片直接是Geetest
+         官网给的图库，即使是加密过的图片，也可以通过极验验证的官网获取到图片，而且加密后的图片辨识度很高。
+前端可得出的验证图片位置选择的代码（网站前端中所得）：
+```java  
+<div class="gt_cut_fullbg gt_show">
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -157px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -145px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -265px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -277px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -181px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -169px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -241px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -253px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -109px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -97px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -289px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -301px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -85px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -73px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -25px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -37px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -13px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -1px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -121px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -133px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -61px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -49px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -217px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -229px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -205px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -193px -58px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -145px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -157px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -277px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -265px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -169px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -181px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -253px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -241px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -97px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -109px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -301px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -289px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -73px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -85px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -37px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -25px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -1px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -13px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -133px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -121px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -49px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -61px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -229px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -217px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -193px 0px;" class="gt_cut_fullbg_slice"></div>
+<div style="background-image: url(&quot;http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg&quot;); background-position: -205px 0px;" class="gt_cut_fullbg_slice"></div></div>
+   
+```
+
+网页查看前端显示的图片链接（加密后的图片）：http://static.geetest.com/pictures/gt/d0fe39770/d0fe39770.jpg
+![image](https://github.com/AvileHui/Photos/raw/master/图片8.png)
+
+
+
+2、用户信息的安全性
+
+######极验验证会收集用户信息吗？
+
+          官方解释：一些验证基本信息数据将有所反馈，用于不断完善更新我们的产品，服务于用户。与此同时，
+      极验验证也将自觉维护用户利益，承诺对用户使用极验验证所产生的数据严格保密，在未得到用户事先许可
+      的情况下不披露给任何人士或机构。如有疑问，可以联系客户人员索要相关的技术白皮书。
+ 
+          分析：在用户验证的用户基本信息会存储在极验验证的服务器中，在极验验证官方单方面对用户进行
+      保密，一旦极验验证服务器的数据库被盗，用户信息将泄漏，而且官方也没有给出对用户信息的存储方式，
+      有没有加密？用的什么算法加密算法安不安全？...等等一系列的问题都没有给出正确的解决方案或是回答。
+
+
+3、极验验证的破译
+       
+在geetest的官网中注册一个账号，登录后台后，可以添加站点以及数据并且申请相应的应用ID，以及私钥KEY。
+
+![image](https://github.com/AvileHui/Photos/raw/master/图片7.png)
+
+图中的ID以及KEY是对于极验验证后台管理的一个身份校验，在网站安装极验验证时，需要用到这两个值才能进行对用户的验证。
+
+-------------------------------------------------------------
+在网上有人破译了类似极验验证的示例：摘自 http://my.oschina.net/u/237940/blog/337194 
+
+######Part 1 识别
+
+读取原图： 随便多刷新几次，读两张图片，用 PS 补成原图。
+![image](https://github.com/AvileHui/Photos/raw/master/图片9.png)
+
+对比图片：利用canvas的特性 getImageData 读取像素，然后和你想要识别的图片对比，找出被挖出去的部分。
+
+计算补全： 然后计算好被挖出部分在x和y方向的偏移量，然后把小图移动过去
+![image](https://github.com/AvileHui/Photos/raw/master/图片10.jpg)
+
+代码示例： 看runjs： http://sandbox.runjs.cn/show/gfeesnxw
+
+######Part 2 模拟
+
+页面模拟：除了知道怎么识别图片位置，还需要知道怎么在页面模拟鼠标拖动操作，将图片移动到合适的位置。
+
+在页面拖动一个元素，差不多看成是3个事件的组合：mousedown，mousemove，mouseup。
+
+那么首先需要创建事件，定义好一个差不多的函数吧： 
+```java 
+function createEvent(eventName, ofsx, ofsy) {
+    var evt = document.createEvent('MouseEvents');
+     
+    evt.initMouseEvent(
+        eventName , true , false , null ,
+        0 , 0 , 0 , ofsx, ofsy, 
+        false, false , false, false, 0, null
+    );
+     
+    return evt;
+}
+```
+
+然后就是用js代码模拟拖动：
+```java 
+var idPrefix = $("div.capy-captcha").attr("id").substring(0, 8);
+ 
+var obj = document.getElementById(idPrefix+"pieces").childNodes[1];
+var box = document.getElementById(idPrefix+"capy");
+var boxRect = box.getBoundingClientRect();
+ 
+var move = createEvent('mousemove', boxRect.left + obj.offsetLeft + 10, boxRect.top + obj.offsetTop - 10),
+    down = createEvent('mousedown', boxRect.left + obj.offsetLeft, boxRect.top + obj.offsetTop),
+    up = createEvent('mouseup');
+ 
+obj.dispatchEvent(down);
+document.dispatchEvent(move);
+obj.dispatchEvent(up);
+```
+上面这段代码不是通用的，只是一个例子，可以去这里 https://www.capy.me/account/signup 用浏览器控制台输入代码测试。代码中的数字 10 就是移动的像素，自行按需修改.
+
+  
+-------------------------------------
+分析：基于极验验证的验证破解，原理类似于上述过程： 
+
+           先进行对图片的完整分析得出相应的x，因为滑动不涉及y的变动，仅需要运用canvas的特性
+       getImageData读取像素，然后和想要识别的图片对比，找出被挖出去的部分，计算得出需要滑动
+       到的x值，不需要计算完整缺块的x、y值。
+           然后运用js模拟滑动的的操作。对两个参数：userreponse（交互的位置经过加密后的结果）、
+       a（压缩编码后的轨迹）进行变量传递分析，将交互的位置以及模拟的滑动轨迹传入相应的接口，
+       不需要解密就可以通过极验验证。
+           程序可以通过极验验证，这样就能写个程序自动注册帐号了。
+           
+
+
 ###**二、语音验证码（含电话回拨）** 
 ####**语音验证码的出现背景：**  
 　　很多网站在用户注册时需要验证用户的身份，然而用户往往会因为各种原因而接收不到网站发送的短信验证码，导致网站丢失一些用户。  
