--- a/2015-2/L-C/非图形验证码实验报告.md
+++ b/2015-2/L-C/非图形验证码实验报告.md
@@ -150,7 +150,7 @@
 
 
          在雷劈网的前端，直接可以得到验证图片相应位置所对应的选项库，雷劈网运用的验证图片直接是Geetest
-         官网给的图库，即使是加密过的图片，也可以通过极验验证的官网获取到图片，而且加密后的图片辨识度很高。
+     官网给的图库，即使是加密过的图片，也可以通过极验验证的官网获取到图片，而且加密后的图片辨识度很高。
 前端可得出的验证图片位置选择的代码（网站前端中所得）：
 ```java  
 <div class="gt_cut_fullbg gt_show">
@@ -445,6 +445,215 @@ obj.dispatchEvent(up);
 
 　　在语音验证码这个应用场景中，对于TTS技术，我们主要考虑的安全问题在于TTS技术是不是可逆的，也就是说，机器听语音验证码会不会很快的将其转化为文本。写到这里我突然发现我想多了，将语音转化为文字早已不是什么困难的事情了，更何况验证码的组成都是单音节的数字或者字母。TTS的具体算法是否可逆其实不重要，个人觉得实现具体算法的可逆要比直接研究将语音转化为文字的成本高，目前微信早已实现了将普通话转化为文字，更何况验证码。所以这可能也是语音验证码的应用没有图形验证码应用广泛的一个原因吧，毕竟图形验证码生成的时候，位置、形态什么的都是很随机的，匹配起来的难度也高于语音验证码。  
 ###**三、接收短信验证码**  
+
+### （一）手机接收短信验证码原理分析
+
+####原理分析图：
+![image](https://github.com/AvileHui/Photos/raw/master/图片11.png)
+
+ - #####客户端与服务器端后台间的通信原理：
+      
+        1. 手机短信验证码是OTP(one time password)的一种实现方式：挑战/应答方式；
+        
+        2.  挑战应答方式：挑战：后台下发一条随机码（方便记忆，我们给这个随机码取名为X）
+            应答：网页客户端通过算法（例如MD5）将用户信息和随机码X合并，
+            经处理后生成一条字符串（方便记忆，我们给这个字符串取名为Y），
+            并返回给后台；
+            
+        3.  后台用同样的算法处理这条随机码X和后台存储的用户信息，得到一条字符串Z。
+            后台比对来自客户端的字符串Y和自己生成的字符串Z，如果两者一致，
+            则确认用户身份或交易结果。
+ - #####服务器端与通讯服务方之间的通信原理： 
+ 
+  ######举例对象：云通讯服务平台
+  
+1. 流程说明
+![image](https://github.com/AvileHui/Photos/raw/master/图片12.png)
+
+2. Base URL  
+   
+      模板短信API引用的地址有Base URL。
+   
+       Base URL：https://app.cloopen.com:8883
+   
+            注意：为了确保数据隐私，云通讯平台的REST API是通过HTTPS方式请求。
+
+3. 统一请求包头 
+   
+            URL格式：/2013-12-26/Accounts/{accountSid}/SMS/TemplateSMS?sig={SigParameter}
+   
+            在URL格式中 {}内的内容表示为参数，非{}的内容固定不变。
+   
+    属性说明：  
+![image](https://github.com/AvileHui/Photos/raw/master/图片16.png)
+
+4. HTTP标准包头字段
+   
+            Accept:application/xml;
+            Content-Type:application/xml;
+            charset=utf-8;
+            Content-Length:256;  
+            Authorization:
+    属性说明:  
+ ![image](https://github.com/AvileHui/Photos/raw/master/图片15.png)
+ 
+5. 请求包体
+   
+ ![image](https://github.com/AvileHui/Photos/raw/master/图片13.png)
+ 
+6. 响应
+   
+     **此步响应只表明客户的短信请求发送成功，不表明短信通道已经发送短信成功。**   
+![image](https://github.com/AvileHui/Photos/raw/master/图片14.png)
+
+
+### （二）手机接收短信验证码安全分析
+
+#### 短信验证的预设：
+    
+> （1） 认为用户的手机卡是不会轻易丢失和被窃取的，和用户绑定更紧密。相对于各种脱库事件，密码泄露的概率还是比丢手机的概率大多了，况且丢了手机可以立即去运营商挂失补卡，而且手机卡的办理也是需要对身份的核实，这样短信验证码与用户身份一一对应。
+>
+> （2）认为有手机号可以做二次验证的用户是真实用户。所以手机验证码通常也会在要求比较高的场合被用来作反垃圾注册，而且手机号与用户身份证上的信息对应，真实性的概率较高。
+>
+> （3）认为运营商维护的通讯信道比其他的都更安全。
+
+这些预设基本上是靠谱的，只是在智能手机普及的大环境下各类短信木马此起彼伏，补卡攻击和无线电监听这些一直存在的问题也被关注和利用，短信验证的安全性就开始出现了问题。
+
+####目前短信验证的五大威胁：
+
+> （1）智能手机平台上的**短信木马**，这里（[支付宝大盗分析报告](http://blog.csdn.net/androidsecurity/article/details/17149501)）可以看到一个案例。这种木马的作用之前广泛用于支付宝诈骗，不法分子诱骗受害者通过二维码下载安装木马，随后重置受害者的支付宝、淘宝账户盗取钱财。因为之前支付宝的重置密码验证只通过短信验证码，木马在后台可以轻易窃取并转发给不法分子，实现对受害者的账号重置。这类木马编写简单，已经形成了非常完整的产业链：从制马人员到售马、租马，到实施钓鱼、欺骗、洗号、转移钱财。
+> 
+>    在智能手机的年代，由于OS开放了短信操作和拦截的接口（Android直接提供，iOS需要越狱），对于一个安装了支付类App的智能手机且绑定账户的SIM卡也安装在同一个手机的情况（绝大部分情况下是这样），短信验证事实上已经退化成了单因子验证，只要智能手机被安装了木马那么这些验证体系就会全线崩溃，攻击者甚至可以只通过钓鱼wifi全部搞定登陆密码、支付密码和短信验证，参见视频的演示：（[《每周质量报告》20140615 移动支付的隐忧](http://news.cntv.cn/2014/06/15/VIDE1402809484638713.shtml)）
+> 
+>（2）**补卡攻击、克隆攻击**。之前提到了短信验证码事实上是基于手机号（SIM卡/运营商服务）而不是手机设备，那么如果能办一张和受害者相同的手机号（卡），自然就能狸猫换太子，接受受害者的验证码，重置各种账号。
+>参考安卓系统手机绑定银行卡易成黑客“提款卡”，这里的薄弱环节就在运营商，部分地区的运营商对补卡人员身份验证不严导致出现了补卡攻击。在早些年SIM卡构造简单的时候甚至还能直接去克隆一张卡出来，目前SIM卡在加密的前提下还是有人破译克隆出SIM卡，详情见知乎回答：http://www.zhihu.com/question/20069970 。
+> 
+> （3）**无线电监听**。这里主要包括GSM监听，包括监听空中短信，直接获取短信内容，但这个玩法成本和范围有限制，相对1、2来说用在真正犯罪的情况下还比较少。
+> 
+> （4）**短信仓库/短信转移/信息泄露**：前两者都是运营商的业务，可以在网站上看到短信内容， 或者转发到指定的手机中。这类一般都集中在信息泄露的案件中，盗用者通过受害者的信息， 利用运营上的服务来获取或者盗用短信。有的公司，自身信息安全做的不够，  甚至存在明文存储短信验证码的问题（[某省电信详单查询短信码绕过漏洞（非爆破）](http://www.wooyun.org/bugs/wooyun-2010-017409)），  等等此类，都特别容易造成短信验证码的泄露；  
+> 
+> （5）**作弊风险**：现在很多公司都会有大量的运营活动来支持自己的业务，比如促销满减， 新客1元，免费体验，秒杀，限购等等，这中间就意味着需要很多账户。  而账户一般都会要求做手机短信验证来核实是个真实的用户， 于是就产生了专门做手机验证码服务的卡商和刷单的赚客（淘宝的刷信用也是其中一种），  从而危害到了公司正常业务的发展（[城市晚报-多媒体数据报](http://cswbszb.chinajilin.com.cn/html/2012-12/09/content_860375.htm)）
+
+
+
+### （三）实验
+
+####方法一：如何绕过短信验证来注册网站用户 
+
+ - 使用http://receive-sms.com
+ - 实验对象：SMSGlobal
+ 
+            该网站在线提供收取短信的服务,它允许任何人收到短信。
+          它有一个一次性数字来自美国的列表，也可以付费购买一个
+          或多个手机号码。
+
+下面是如何使用接收短信在线绕过短信验证:
+
+ 1. 进入 http://receive-sms.com :  
+![image](https://github.com/AvileHui/Photos/raw/master/实验4.png)
+ 2. 选择在线接收短信网站上任意一个手机号码，将此号码在注册网站的手机号码一栏输入；
+![image](https://github.com/AvileHui/Photos/raw/master/实验5.png) 
+ 3. 发送验证码......如果该号码失败（不工作）则换一个号码；
+      
+ 4.  点击你选择的手机号码的框框，就会进入该手机号码的收件箱;
+![image](https://github.com/AvileHui/Photos/raw/master/实验2.png)
+    
+ 5. 你可以找到你验证码所在的短信，读取验证码，将其输入你要注册网站用户的验证码一栏；
+![image](https://github.com/AvileHui/Photos/raw/master/实验1.png) 
+
+ 6. 这样就成功注册了一个不是用你自己手机号注册的用户，绕过了短信验证.
+![image](https://github.com/AvileHui/Photos/raw/master/实验3.png)
+
+
+######网上还有一些在线提供免费接收短信服务的网站：
+- http://receivesmsonline.in
+- http://hs3x.com
+- http://sms-receive.net
+- http://www.receive-sms-now.com
+- http://www.receivesmsonline.net
+- http://receive-sms-online.com
+- http://www.receive-sms-online.info
+- http://receivesmsonline.com
+- http://receivefreesms.net
+
+######注意：
+            这样的做法应该要注意的是：注册的时候可能会提示“该号已被注册”，“此号不可使用”
+        或是 “该号使用频繁”等相似问题， 国内很多大型支持国外手机号的网站平台，如天猫，支
+        付宝，新浪，腾讯QQ等（我都实验过）， 都对这些接收短信平台的手机号进行“免疫”过，
+        已经进入黑名单: 
+     
+![image](https://github.com/AvileHui/Photos/raw/master/绕过1.png)
+    
+![image](https://github.com/AvileHui/Photos/raw/master/支付宝3.png)
+    
+![image](https://github.com/AvileHui/Photos/raw/master/QQ.png)
+    
+        所以我选择的是一个国外的网站来作为实验对象，国内这些知名以及大型的网站用户注册
+    用短信接收平台不可行，但此平台对于大部分的网站都是可行的，若是出现使用频繁等问题，
+    那采取的解决方案就是改变号码以及网站数量， 这样的做法还是很简单，这样没有为该实验
+    增加技术上的难度。 
+    
+####方法二：如何绕过短信验证来注册网站用户 
+ 工具 1:使用工具：Hushed app（一次性电话号码） 
+    
+ 过程步骤：
+  - 在手机app stores上下载Hushed app（目前只支持苹果用户）
+    
+![image](https://github.com/AvileHui/Photos/raw/master/hush1.jpg)
+    
+![image](https://github.com/AvileHui/Photos/raw/master/hush2.jpg)
+    
+  - 可以选择你想要地区的号码作为你的hushed号码,需要付费。
+    
+![image](https://github.com/AvileHui/Photos/raw/master/hush3.jpg)
+    
+![image](https://github.com/AvileHui/Photos/raw/master/hush4.jpg)
+    
+  - 运用hushed得到的是合法的电话号码,在网站上的短信验证工作就可以正常进行了。
+    
+![image](https://github.com/AvileHui/Photos/raw/master/hush5.jpg)
+    
+> 工具 2:使用工具：burner app（燃烧器） 
+>
+> 过程步骤：
+>  1. 首先安装一个android模拟器（也可以用真机）,然后申请一个谷歌帐号,然后使用这个应用程序:www.burnerapp.com 得到一个免费的,一次性的电话号码。
+>  2. 当你的免费号码和分钟耗尽,用另一个谷歌帐户,从android模拟器,删除当前用户再次登录,并安装免费的android帐户的燃烧器的应用为了得到另一个免费的号码。
+>  3. 运用燃烧器得到的号码,它不是一个voip网络,所以得到的是合法的电话号码,在网站上的短信验证工作就可以正常进行。
+
+Summary：Burner既可以在android上使用，也可以在apple上使用，而Hushed只能在apple上使用。
+    
+Hushed与Burner两种没有本质的区别，得到的号码都是真实的号码，但是Burner的申请需要谷歌账号，但无法科学上网而不得实验。
+    
+这两种工具的使用就是购买合法电话号码的使用权，利用app软件来代替SIM卡的功能，即是不需要用SIM卡就可以使用真实手机号码。
+
+
+
+
+-------------------------------------------------------------------------------------------------------------------
+
+
+
+
+>  **参考链接：**
+>
+>   链接：http://www.zhihu.com/question/27796987/answer/71611517
+>
+> 链接：http://www.zhihu.com/question/31759537/answer/53174458
+>
+> 来源：知乎
+>
+> 链接：http://www.yuntongxun.com/ 
+>
+> 来源：云通讯官网帮助文档
+>
+> 链接：http://www.effecthacking.com/2015/07/how-to-bypass-sms-verification-verify-sms.html
+>
+> 来源：Effect Haking
+>
+> 链接：https://www.reddit.com/r/hacking/comments/29i9ag/my_contribution_to_reddit_how_to_bypass_sms/
+>
+> 来源：Reddit
+
 
 ###**四、编辑指定短信内容发送到指定号码**  
 
