Update   短信验证验证——信息泄露实验

--- a/2015-2/L-C/非图形验证码实验报告.md
+++ b/2015-2/L-C/非图形验证码实验报告.md
@@ -544,9 +544,45 @@ obj.dispatchEvent(up);
 > 
 > （3）**无线电监听**。这里主要包括GSM监听，包括监听空中短信，直接获取短信内容，但这个玩法成本和范围有限制，相对1、2来说用在真正犯罪的情况下还比较少。
 > 
-> （4）**短信仓库/短信转移/信息泄露**：前两者都是运营商的业务，可以在网站上看到短信内容， 或者转发到指定的手机中。这类一般都集中在信息泄露的案件中，盗用者通过受害者的信息， 利用运营上的服务来获取或者盗用短信。有的公司，自身信息安全做的不够，  甚至存在明文存储短信验证码的问题（[某省电信详单查询短信码绕过漏洞（非爆破）](http://www.wooyun.org/bugs/wooyun-2010-017409)），  等等此类，都特别容易造成短信验证码的泄露；  
+> （4）**短信仓库/短信转移/信息泄露**：前三者都是运营商的业务，克隆SIM卡，可以在网站上看到短信内容， 或者转发到指定的手机中。这类一般都集中在信息泄露的案件中，盗用者通过受害者的信息， 利用运营上的服务来获取或者盗用短信。有的公司，自身信息安全做的不够，  甚至存在明文存储短信验证码的问题（[某省电信详单查询短信码绕过漏洞（非爆破）](http://www.wooyun.org/bugs/wooyun-2010-017409)），  等等此类，都特别容易造成短信验证码的泄露；  
 > 
 > （5）**作弊风险**：现在很多公司都会有大量的运营活动来支持自己的业务，比如促销满减， 新客1元，免费体验，秒杀，限购等等，这中间就意味着需要很多账户。  而账户一般都会要求做手机短信验证来核实是个真实的用户， 于是就产生了专门做手机验证码服务的卡商和刷单的赚客（淘宝的刷信用也是其中一种），  从而危害到了公司正常业务的发展（[城市晚报-多媒体数据报](http://cswbszb.chinajilin.com.cn/html/2012-12/09/content_860375.htm)）
+
+                                
+分析——根据第（4）点：短信仓库/短信转移/信息泄露
+                                
+　　在小学期中，我们创建的云存储中，就把加解密的文件放在后台的一个目录下，网页可以直接根据其文件的地址访问而得到文件内容。
+                                
+类比推理：
+                                     
+　　相同的思路，短信的验证码是由网站后台随机产生的，其验证码会伴随用户特征一起存储在某个文件路径，对于一些安全性较差的网站可能直接就明文存储了，在前端的到相应的位置，根据人工推理应该可以得到其存储的位置，在进行访问。如果验证码明文存储且网站安全性差，并且得到其存储位置，那么，直接随机产生手机号，在网页访问便可得到验证码，这样注册就再也简单不过了。
+
+                                 
+测试对象————新东方在线   &&    铁友网
+                                
+新东方在线：
+                                
+安全性不高，但是发送验证码时，直接调用函数，没有传参，在前端得不到验证码，但是大概能够猜到验证码的大概位置：
+                                
+![image](https://github.com/AvileHui/Photos/raw/master/信息1.png)
+![image](https://github.com/AvileHui/Photos/raw/master/信息2.png)
+![image](https://github.com/AvileHui/Photos/raw/master/信息3.png)
+![image](https://github.com/AvileHui/Photos/raw/master/信息4.png)
+                                
+铁友网：
+                               
+在重新发送验证码时，得到其中的验证码参数，因为安全性稍强，有将手机号和验证码加密传输，而得不到明文的验证码。
+                                     
+得到发送短信验证码时所请求的地址：
+
+https://u.tieyou.com/ajax/sendMobileCheckCode.html?mobile=c196eec9382760d637bcc28a7aee75a1&checkCode=pzm7&action=mobileReg&jsoncallback=jsonp1451316836579
+                               
+![image](https://github.com/AvileHui/Photos/raw/master/信息5.png)
+
+                                
+　　综合两者可以得出：我提出的可能形式存在的。新东方在线的安全缺陷再加上铁友网手机号、短信验证码的参数传输，继而便可明文得到短信验证码，即便在新东方在线中无法得到直接的明文验证码，但也可通过对地址后缀的猜测来得到验证码存储的位置，而得到短信验证码。由此而知，网站后台关系到用户的个人信息的保密问题，可见网站安全程度的重要性。
+
+
 
 
 
