--- a/2015-2/L-C/非图形验证码实验报告.md
+++ b/2015-2/L-C/非图形验证码实验报告.md
@@ -19,12 +19,9 @@
 
 （一）简介：
 
-          拖动按钮到适当位置完成拼图即可完成验证。这就是“极验验证”的验证解决方案。相较于传统的
-      码式验证，由于省去了“识别”、“输入”等过程，用户验证时间从原来的可能10多秒缩短到仅需 2、3 
-      秒。虽然过程变简单了，但安全性却比之前的码式验证高出许多。      
-          就是这简单的一下拖动，后台却能提取超过 100多个变量，包括拖动位置、拖动速度等显性变量，
-      和服务器的数据交换等隐性变量，以及一些随机性变量。基于以上行为变量，再通过极验核心的多重
-      行为判别模型，使得后台能够区分出“人”与“恶意程序”。
+　　拖动按钮到适当位置完成拼图即可完成验证。这就是“极验验证”的验证解决方案。相较于传统的码式验证，由于省去了“识别”、“输入”等过程，用户验证时间从原来的可能10多秒缩短到仅需 2、3 秒。虽然过程变简单了，但安全性却比之前的码式验证高出许多。
+                                      
+　　就是这简单的一下拖动，后台却能提取超过100多个变量，包括拖动位置、拖动速度等显性变量，和服务器的数据交换等隐性变量，以及一些随机性变量。基于以上行为变量，再通过极验核心的多重行为判别模型，使得后台能够区分出“人”与“恶意程序”。
 
 （二）通讯过程：
 
@@ -47,10 +44,11 @@
 
 （三）宕机回滚
 
-      在遇到不可抗拒的因素，例如：地震，火灾，机房大规模停电。极验也尽量保证不影响用户页面
-      的正常使用。极验技术团队尽快多方面联系和解决，尽快恢复服务。
-      在此期间，网站主的验证会自动切换到离线备选方案状态，确保用户的业务逻辑能够正常通行。
-      主要原理：
+　　在遇到不可抗拒的因素，例如：地震，火灾，机房大规模停电。极验也尽量保证不影响用户页面的正常使用。极验技术团队尽快多方面联系和解决，尽快恢复服务。
+                                 
+　　在此期间，网站主的验证会自动切换到离线备选方案状态，确保用户的业务逻辑能够正常通行。
+                                       
+主要原理：
   
     （1）浏览器向客户服务器请求页面
     （2）客户服务器向极验服务器发起请求
@@ -65,11 +63,9 @@
 
 （四）服务端SDK
 
-        服务端的SDK存在的目的是为了让真正的验证请求和回答都来自于可信的终端：网站主服务器
-     和极验服务器。极验为每一种服务器端开发语言提供了SDK，并以web客户端为例子提供了相应的
-     Demo，开发人员可以快速的搭建起相应的演示程序。
-        开发人员使用Demo提供的默认验证模块快速搭建本地应用并成功运行后，只需要经过如下步
-     骤做出相应修改就可以完成个人专属验证模块的绑定
+　　服务端的SDK存在的目的是为了让真正的验证请求和回答都来自于可信的终端：网站主服务器和极验服务器。极验为每一种服务器端开发语言提供了SDK，并以web客户端为例子提供了相应的Demo，开发人员可以快速的搭建起相应的演示程序。
+                                       
+　　开发人员使用Demo提供的默认验证模块快速搭建本地应用并成功运行后，只需要经过如下步骤做出相应修改就可以完成个人专属验证模块的绑定:
 
     （1）从 验证后台 注册账号
     （2）添加验证，可以获取一组当前验证的ID/Key
@@ -94,12 +90,9 @@
 
 （二）安全的技术支持：
 
-          极验验证不再仅通过图灵理论，而是通过多重行为特征来区分人机，利用“行为式验证”彻底改变传统
-      “码式验证”技术的单一防护构架。 基于行为式验证的理论基础，极验验证在全面考虑验证技术原理后，
-      提出全新的验证安全框架，从根本上颠覆了第一代验证的理论基础，将人工智能、机器学习等技术与
-      验证的安全紧密结合，达到一个全新的高度。主要采用“多重异构”、 “动态更新”、“黑盒隐藏”三点安全策略，
-      从根本上保障网站的安全。
+　　极验验证不再仅通过图灵理论，而是通过多重行为特征来区分人机，利用“行为式验证”彻底改变传统“码式验证”技术的单一防护构架。基于行为式验证的理论基础，极验验证在全面考虑验证技术原理后，提出全新的验证安全框架，从根本上颠覆了第一代验证的理论基础，将人工智能、机器学习等技术与验证的安全紧密结合，达到一个全新的高度。主要采用“多重异构”、“动态更新”、“黑盒隐藏”三点安全策略，从根本上保障网站的安全。
       
+                                    
 前端收集的数据：
 
     （1）challenge:后台生成的一个验证流水
@@ -133,24 +126,20 @@
 
 ![image](https://github.com/AvileHui/Photos/raw/master/图片4.png)
    
-         多次试验得出重合区域误差在5~8个像素可成功通过验证，说明有8/198的几率可以随机尝试成功。
-     尝试五次失败后刷新一次图片，每张图片对应的验证位置是固定的，因为拼图的图案是固定的几片，
-     而且图片是提前随机生成存到服务器中，说明还是有一定的数量，没有做到每个ID的每次验证做到随机，
-     就可以建成一个破解验证码的库，验证码一旦有一个库，就可以穷举。
+　　多次试验得出重合区域误差在5~8个像素可成功通过验证，说明有8/198的几率可以随机尝试成功。尝试五次失败后刷新一次图片，每张图片对应的验证位置是固定的，因为拼图的图案是固定的几片，而且图片是提前随机生成存到服务器中，说明还是有一定的数量，没有做到每个ID的每次验证做到随机，就可以建成一个破解验证码的库，验证码一旦有一个库，就可以穷举。
 
 
 
-
-        雷劈网的极验验证还有个bug，在尝试很多遍之后刷新出来的图片一直不变，而且连位置都一模一样
-     （如下图）
-        可能是因为极验验证的图片大小远大于普通验证码，为了提高效率，而重复使用图片，造成验证码
-     单一可枚举，所以说这就导致机器更加容易枚举破解验证码了。
+　　雷劈网的极验验证还有个bug，在尝试很多遍之后刷新出来的图片一直不变，而且连位置都一模一样（如下图）
+　　                                                    
+　　可能是因为极验验证的图片大小远大于普通验证码，为了提高效率，而重复使用图片，造成验证码单一可枚举，所以说这就导致机器更加容易枚举破解验证码了。
+　　                                                                    
 ![image](https://github.com/AvileHui/Photos/raw/master/图片5.png)
 ![image](https://github.com/AvileHui/Photos/raw/master/图片6.png)
 
-
-         在雷劈网的前端，直接可以得到验证图片相应位置所对应的选项库，雷劈网运用的验证图片直接是Geetest
-     官网给的图库，即使是加密过的图片，也可以通过极验验证的官网获取到图片，而且加密后的图片辨识度很高。
+                                      
+　　在雷劈网的前端，直接可以得到验证图片相应位置所对应的选项库，雷劈网运用的验证图片直接是Geetest官网给的图库，即使是加密过的图片，也可以通过极验验证的官网获取到图片，而且加密后的图片辨识度很高。
+                                            
 前端可得出的验证图片位置选择的代码（网站前端中所得）：
 ```java  
 <div class="gt_cut_fullbg gt_show">
@@ -222,9 +211,7 @@
       极验验证也将自觉维护用户利益，承诺对用户使用极验验证所产生的数据严格保密，在未得到用户事先许可
       的情况下不披露给任何人士或机构。如有疑问，可以联系客户人员索要相关的技术白皮书。
  
-          分析：在用户验证的用户基本信息会存储在极验验证的服务器中，在极验验证官方单方面对用户进行
-      保密，一旦极验验证服务器的数据库被盗，用户信息将泄漏，而且官方也没有给出对用户信息的存储方式，
-      有没有加密？用的什么算法加密算法安不安全？...等等一系列的问题都没有给出正确的解决方案或是回答。
+　　分析：在用户验证的用户基本信息会存储在极验验证的服务器中，在极验验证官方单方面对用户进行保密，一旦极验验证服务器的数据库被盗，用户信息将泄漏，而且官方也没有给出对用户信息的存储方式，有没有加密？用的什么算法加密算法安不安全？...等等一系列的问题都没有给出正确的解决方案或是回答。
 
 
 3、极验验证的破译
@@ -233,7 +220,7 @@
 
 ![image](https://github.com/AvileHui/Photos/raw/master/图片7.png)
 
-图中的ID以及KEY是对于极验验证后台管理的一个身份校验，在网站安装极验验证时，需要用到这两个值才能进行对用户的验证。
+　　图中的ID以及KEY是对于极验验证后台管理的一个身份校验，在网站安装极验验证时，需要用到这两个值才能进行对用户的验证。
 
 -------------------------------------------------------------
 在网上有人破译了类似极验验证的示例：摘自 http://my.oschina.net/u/237940/blog/337194 
@@ -287,19 +274,17 @@ obj.dispatchEvent(down);
 document.dispatchEvent(move);
 obj.dispatchEvent(up);
 ```
-上面这段代码不是通用的，只是一个例子，可以去这里 https://www.capy.me/account/signup 用浏览器控制台输入代码测试。代码中的数字 10 就是移动的像素，自行按需修改.
+　　上面这段代码不是通用的，只是一个例子，可以去这里 https://www.capy.me/account/signup 用浏览器控制台输入代码测试。代码中的数字 10 就是移动的像素，自行按需修改.
 
   
 -------------------------------------
 分析：基于极验验证的验证破解，原理类似于上述过程： 
-
-           先进行对图片的完整分析得出相应的x，因为滑动不涉及y的变动，仅需要运用canvas的特性
-       getImageData读取像素，然后和想要识别的图片对比，找出被挖出去的部分，计算得出需要滑动
-       到的x值，不需要计算完整缺块的x、y值。
-           然后运用js模拟滑动的的操作。对两个参数：userreponse（交互的位置经过加密后的结果）、
-       a（压缩编码后的轨迹）进行变量传递分析，将交互的位置以及模拟的滑动轨迹传入相应的接口，
-       不需要解密就可以通过极验验证。
-           程序可以通过极验验证，这样就能写个程序自动注册帐号了。
+                               
+　　(1)先进行对图片的完整分析得出相应的x，因为滑动不涉及y的变动，仅需要运用canvas的特性getImageData读取像素，然后和想要识别的图片对比，找出被挖出去的部分，计算得出需要滑动到的x值，不需要计算完整缺块的x、y值。
+　　                             
+　　(2)然后运用js模拟滑动的的操作。对两个参数：userreponse（交互的位置经过加密后的结果）、a（压缩编码后的轨迹）进行变量传递分析，将交互的位置以及模拟的滑动轨迹传入相应的接口，不需要解密就可以通过极验验证。
+　　                                         
+　　(3)程序可以通过极验验证，这样就能写个程序自动注册帐号了。
            
 
 
@@ -580,7 +565,7 @@ https://u.tieyou.com/ajax/sendMobileCheckCode.html?mobile=c196eec9382760d637bcc2
 ![image](https://github.com/AvileHui/Photos/raw/master/信息5.png)
 
                                 
-　　综合两者可以得出：我提出的可能形式存在的。新东方在线的安全缺陷再加上铁友网手机号、短信验证码的参数传输，继而便可明文得到短信验证码，即便在新东方在线中无法得到直接的明文验证码，但也可通过对地址后缀的猜测来得到验证码存储的位置，而得到短信验证码。由此而知，网站后台关系到用户的个人信息的保密问题，可见网站安全程度的重要性。
+　　综合两者可以得出：我提出的可能形式是存在的。新东方在线的安全缺陷再加上铁友网手机号、短信验证码的参数传输，继而便可明文得到短信验证码，即便在新东方在线中无法得到直接的明文验证码，但也可通过对地址后缀的猜测来得到验证码存储的位置，而得到短信验证码。由此而知，网站后台关系到用户的个人信息的保密问题，可见网站安全程度的重要性。
 
 
 
@@ -627,10 +612,7 @@ https://u.tieyou.com/ajax/sendMobileCheckCode.html?mobile=c196eec9382760d637bcc2
 - http://receivefreesms.net
 
 ######注意：
-            这样的做法应该要注意的是：注册的时候可能会提示“该号已被注册”，“此号不可使用”
-        或是 “该号使用频繁”等相似问题， 国内很多大型支持国外手机号的网站平台，如天猫，支
-        付宝，新浪，腾讯QQ等（我都实验过）， 都对这些接收短信平台的手机号进行“免疫”过，
-        已经进入黑名单: 
+　　这样的做法应该要注意的是：注册的时候可能会提示“该号已被注册”，“此号不可使用”或是“该号使用频繁”等相似问题，国内很多大型支持国外手机号的网站平台，如天猫，支付宝，新浪，腾讯QQ等（我都实验过）， 都对这些接收短信平台的手机号进行“免疫”过，已经进入黑名单: 
      
 ![image](https://github.com/AvileHui/Photos/raw/master/绕过1.png)
     
@@ -638,10 +620,7 @@ https://u.tieyou.com/ajax/sendMobileCheckCode.html?mobile=c196eec9382760d637bcc2
     
 ![image](https://github.com/AvileHui/Photos/raw/master/QQ.png)
     
-        所以我选择的是一个国外的网站来作为实验对象，国内这些知名以及大型的网站用户注册
-    用短信接收平台不可行，但此平台对于大部分的网站都是可行的，若是出现使用频繁等问题，
-    那采取的解决方案就是改变号码以及网站数量， 这样的做法还是很简单，这样没有为该实验
-    增加技术上的难度。 
+　　所以我选择的是一个国外的网站来作为实验对象，国内这些知名以及大型的网站用户注册用短信接收平台不可行，但此平台对于大部分的网站都是可行的，若是出现使用频繁等问题，那采取的解决方案就是改变号码以及网站数量， 这样的做法还是很简单，这样没有为该实验增加技术上的难度。 
     
 ####方法二：如何绕过短信验证来注册网站用户 
  工具 1:使用工具：Hushed app（一次性电话号码） 
